[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-iru-tir-international-mcp"
version = "1.0.0"
description = "International road transport compliance: TIR Carnet, CMR consignment note, ADR dangerous goods, AEO, IRU eTIR, border-crossing packs. Covers 78 TIR contracting parties and IRU's 1,000+ national associations. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "tir", "tir-carnet", "iru", "cmr", "adr", "aeo", "international-transport", "customs", "haulage", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-iru-tir-international-mcp"

[project.scripts]
meok-iru-tir-international-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
